--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,33 @@
 # Core Dependencies
-streamlit==1.28.0
-numpy==1.24.3
-pandas==2.0.3
+streamlit>=1.28.0
+numpy>=1.24.0,<2.0.0
+pandas>=2.0.0
 
-# Deep Learning
-tensorflow==2.13.0
-keras==2.13.1
+# Deep Learning (TensorFlow 2.10 for compatibility)
+tensorflow==2.10.1
+# keras is included with tensorflow 2.10, no separate install needed
 
 # Computer Vision
-opencv-python==4.8.1.78
-scikit-image==0.21.0
-Pillow==10.0.1
+opencv-python-headless>=4.8.0
+scikit-image>=0.21.0
+Pillow>=10.0.0
 
 # Machine Learning
-scikit-learn==1.3.0
+scikit-learn>=1.3.0
 
 # Interpretability
-lime==0.2.0.1
+lime>=0.2.0
 
 # Visualization
-matplotlib==3.7.2
-seaborn==0.12.2
+matplotlib>=3.7.0
+seaborn>=0.12.0
 
 # Image Augmentation
-albumentations==1.3.1
+albumentations>=1.3.0
 
 # Additional Utilities
-tqdm==4.66.1
-pathlib==1.0.1
+tqdm>=4.66.0
+gdown>=4.7.0
 
-# Optional: TensorFlow Addons (if using advanced features)
-tensorflow-addons==0.21.0
+# Note: pathlib is built into Python 3.4+, no need to install
+# Note: keras comes with tensorflow 2.10, no separate install needed
