--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,14 @@
-# Core Dependencies
-streamlit>=1.28.0
-numpy>=1.24.0,<2.0.0
-pandas>=2.0.0
-
-# Deep Learning (TensorFlow 2.10 for compatibility)
+streamlit
+numpy
+pandas
 tensorflow==2.10.1
-# keras is included with tensorflow 2.10, no separate install needed
-
-# Computer Vision
-opencv-python-headless>=4.8.0
-scikit-image>=0.21.0
-Pillow>=10.0.0
-
-# Machine Learning
-scikit-learn>=1.3.0
-
-# Interpretability
-lime>=0.2.0
-
-# Visualization
-matplotlib>=3.7.0
-seaborn>=0.12.0
-
-# Image Augmentation
-albumentations>=1.3.0
-
-# Additional Utilities
-tqdm>=4.66.0
-gdown>=4.7.0
-
-# Note: pathlib is built into Python 3.4+, no need to install
-# Note: keras comes with tensorflow 2.10, no separate install needed
+opencv-python-headless
+scikit-image
+Pillow
+scikit-learn
+lime
+matplotlib
+seaborn
+albumentations
+tqdm
+gdown
