--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
 numpy
 pandas
-tensorflow==2.10.1
+tensorflow-cpu==2.10.0
 opencv-python-headless
 scikit-image
 Pillow
@@ -12,3 +12,4 @@ seaborn
 albumentations
 tqdm
 gdown
+
