--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit
-numpy
+numpy=1.23.5
 pandas
 tensorflow-cpu==2.10.0
 opencv-python-headless
@@ -12,4 +12,5 @@ seaborn
 albumentations
 tqdm
 gdown
+
 
